# GUIDE-Walk-v2.0

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
demo_video/: README.md
model/: MobileNetSSDV2_deploy.prototxt
python/: alter_filename.py  check_dataset.py  check_lmdb.py  check_single.py  coco_separate_class.py  delete_specs.py  delete_unused.py  duplicate_data.py  evaluate_dataset.py  join_folder.py  json_to_xml.py  plot_sensor_data.py  record_dataset.py  refine_dataset.py  separate_class.py  sort_out_classes.py  split_annotation_file.py
src/: I2C_core.h  Main.cpp  audio.h  lidar.h  net.h  usfs.h  usfs_master.h
